# madara-app

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
public/: tailwind.css
src/: main.rs
src/components/Header/: index.tsx
src/components/connected/: index.tsx
src/components/deploy/: index.tsx
src/components/main/: latest-transaction.tsx  latestblock.tsx
src/components/metadata/: index.tsx
src/components/mint/: deployToken.tsx  index.tsx  mintToken.tsx
src/components/navbar/: index.tsx
src/components/transfer/: index.tsx
src/layout/: index.tsx
src/pages/: blocks.tsx  deploy.tsx  editor.tsx  index.tsx  mint.tsx  transactions.tsx  transfer.tsx
src/static/: index.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: index.tsx
