[package]
name = "starkit"
version = "0.1.0"
edition = "2021"
description = "A simple app to interact with Starknet Appchains"

[dependencies]
# Dioxus dependencies
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"

# Starknet dependencies
starknet = "0.3.0"

# Other dependencies
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
serde_with = "2.3.3"
url = "2.4.0"
lazy_static = "1.4.0"

[package.metadata.bundle]
name = "Starkit"
identifier = "io.starknet.starkit"
version = "0.0.1"
copyright = "Copyright (c) Abdelhamid Bakhta 2023. All rights reserved."
category = "Developer Tool"
short_description = "Simply interact with Starknet Appchains"
long_description = """
Starkit is a simple app to interact with Starknet Appchains.
"""